# step2

./: AGENTS.md  README.md
docs/: Step2_VLA_Data_Requirements.md
src/agv_pro_ros2/agv_pro_gazebo/: CMakeLists.txt
src/agv_pro_ros2/agv_pro_gazebo/urdf/: agv_pro.xacro
src/myagv_pro_bringup/: CMakeLists.txt  package.xml
src/myagv_pro_bringup/config/: mecanum_control.yaml
src/myagv_pro_bringup/launch/: sim_slam_nav2.launch.py
src/myagv_pro_bringup/urdf/: agv_pro_with_ros2_control.xacro  ros2_controller_mecanum.xacro
src/mycobot_280_bringup/: .setup_assistant  CMakeLists.txt  package.xml
src/mycobot_280_bringup/config/: mycobot_280_m5.srdf
src/mycobot_280_bringup/config/moveit/: move_group_controllers.params.yaml  moveit.rviz  planning_scene_monitor.yaml  ros2_controllers.yaml  trajectory_execution.yaml
src/mycobot_280_bringup/launch/: mycobot_gazebo_control.launch.py  mycobot_gazebo_moveit.launch.py  mycobot_moveit_only.launch.py
src/mycobot_280_bringup/urdf/gazebo/: mycobot_280_m5_gazebo.urdf.xacro  mycobot_280_m5_ros2_control.xacro
src/mycobot_280_bringup/urdf/moveit/: mycobot_280_m5_moveit.urdf.xacro
src/mycobot_ros2/: README.md
src/mycobot_ros2/Mybuddy/mybuddy/: package.xml
src/mycobot_ros2/mecharm/mecharm/: package.xml  setup.py
src/mycobot_ros2/mecharm/mecharm_pi/: package.xml  setup.py
src/mycobot_ros2/myArm/myarm_300/: package.xml
src/mycobot_ros2/mycobot_280/mycobot_280/: package.xml  setup.py
src/mycobot_ros2/mycobot_280/mycobot_280_arduino/: package.xml  setup.cfg  setup.py
src/mycobot_ros2/mycobot_280/mycobot_280_moveit2_control/: package.xml  setup.py
src/mycobot_ros2/mycobot_280/mycobot_280_rdkx5/: package.xml  setup.cfg  setup.py
src/mycobot_ros2/mycobot_280/mycobot_280_riscv/: package.xml  setup.cfg  setup.py
src/mycobot_ros2/mycobot_280/mycobot_280_x3pi/: package.xml  setup.py
src/mycobot_ros2/mycobot_280/mycobot_280jn/: package.xml  setup.py
src/mycobot_ros2/mycobot_280/mycobot_280pi/: package.xml  setup.py
src/mycobot_ros2/mycobot_280/mycobot_280rdkx5_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_320/mycobot_320/: package.xml  setup.py
src/mycobot_ros2/mycobot_description/: setup.py
src/mycobot_ros2/ultraArm/ultraarm/: package.xml  (+1 more)
(+308 files in other folders)
